fixed spacing

--- a/assets/section-main-quiz.css
+++ b/assets/section-main-quiz.css
@@ -54,21 +54,17 @@ ul[data-breed-list] {
 
 main-quiz {
   width: 100%;
+  min-height: calc(100vh - 5rem);
   display: block;
   padding: 0 1.5rem;
 }
 
 quiz-step {
-  min-height: 55rem;
   overflow: hidden;
 
   + quiz-step {
     display: none;
   }
-}
-
-quiz-step[quiz-step-index='last'] {
-  min-height: 75rem;
 }
 
 quiz-progress {
@@ -125,15 +121,10 @@ quiz-step {
 }
 
 .quiz_step__form {
-  height: 65vh;
   width: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-}
-
-.quiz_step__form:has(.quiz_step__radio_wrap) {
-  height: calc(70vh - 3rem);
 }
 
 .quiz_step__input {
@@ -291,6 +282,7 @@ quiz-back {
 .quiz_step_final__logo {
   width: 170px;
   height: auto;
+  padding-top: 3.5rem;
 }
 
 .quiz_step__heading.quiz_step_final__heading > * {
@@ -355,6 +347,9 @@ loading-screen {
   .quiz_step__form {
     max-width: 37.5rem;
     justify-content: space-between;
+    padding-top: 10rem;
+    min-height: 75vh;
+    padding-bottom: 2rem;
   }
 
   .quiz_step__heading {
@@ -480,6 +475,7 @@ loading-screen {
 
   .quiz_step__form {
     justify-content: center;
+    padding-top: 15rem;
   }
 
   .quiz_step__contents {
@@ -609,14 +605,17 @@ loading-screen {
 
 @media screen and (max-width: 989px) {
   quiz-step {
-    height: calc(100vh - 5rem);
+    min-height: calc(100vh - 15rem);
   }
 }
 
 @media screen and (min-width: 990px) {
+  main-quiz {
+    min-height: calc(100vh - 7rem);
+  }
+
   quiz-step {
-    min-height: 60rem;
-    height: calc(100vh - 7rem);
+    min-height: calc(100vh - 22rem);
   }
 
   .quiz_step__form {
